--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
         sdk: flutter
+  awesome_snackbar_content: ^0.1.4
  
 
   # State Management    
