--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   iconsax_flutter: ^1.0.0
   carousel_slider: ^5.0.0
+  flutter_check_box_rounded: ^3.2.3
 
 dev_dependencies:
   flutter_test:
